--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue-bulma-datepicker": "^1.3.6",
     "vue-datetime": "^1.0.0-beta.8",
     "vue-router": "^3.0.1",
-    "vue-scrollto": "^2.13.0"
+    "vue-scrollto": "^2.13.0",
+    "vuelidate": "^0.7.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
